--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,13 +1,15 @@
-{box-sizing: content-box}
+{box-sizing: border-box;}
 
 
 
 body{
-    width: 1920px;
+    width: 100%;
     height: 100%;
     margin: auto;
+}
 
-
+.main {
+    margin: auto;
 }
 
 header{
