--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,59 +1,68 @@
-{box-sizing: border-box;}
-
 
 
 body{
     width: 100%;
     height: 100%;
-    margin: auto;
-}
+    display: block;
+    align-items: center;
 
-.main {
-    margin: auto;
 }
-
-header{
-    display: inline-flex;
+section {
+    display: flex;
     flex-direction: column;
     text-align: center;
+    align-items: center;
     width: 100%;
-    height: 1000px;
-    background: linear-gradient(rgba(243, 129, 129, .8),rgba(252, 227, 138, .8)), url("../img/Layer.jpg");
+}
+
+.header{
+    height: 100vh;
+    padding: 0;
+    background: linear-gradient(rgba(245, 113, 113, 0.8),rgba(252, 227, 138, .8)), url("../img/Layer.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 
-.container_nav{
-    display: inline-flex;
-    width: 1200px;
-    margin: 0 auto;
+._container {
+    max-width: 1230px;
+    width: 100%;
+    margin: 130px 0 auto 0;
 }
 
-.container_mogo{
-    width: 1200px;
-    height: 940px;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
+.discription {
+    font-size: 15px;
+    font-family: Montserrat sans-serif;
+    color: #999;
+}
+
+.navigation {
+    display: inline-flex;
+    margin: 30px 0 30px 0;
+}
+
+.logo {
+    width: 50%;
+    margin: auto;
+    text-align: left;
+    font-family: montserrat, sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    color: #fff;
 }
 
 ul{
-    display: inline-flex;
+    width: 50%;
     justify-content: space-between;
-    width: 55%;
-    height: 40px;
-    margin: 0;
-    list-style: none;
 }
 
 .nav li{
-    padding-top: 20px;
+    margin: auto;
+    font-family: "Montserrat", sans-serif;
 }
 
 .nav a{
     font-size: 14px;
-    font-family: montserrat,sans-serif;
     color: #ffffff;
     text-decoration: none;
 }
@@ -63,29 +72,21 @@ ul{
     border-bottom: 2px solid;
 }
 
-.container_nav p{
-    font-size: 30px;
-    font-family: montserrat,sans-serif;
-    font-weight: bold;
-    color: #fff;
-    width: 45%;
-    margin: 10px;
-    text-align: left;
-}
-
 .nav i{
     font-size: 14px;
     color: #fff;
 }
 
+.nav i:hover {
+    color: #fce38a;
+    cursor: pointer;
+}
+
 h2{
     font-family: Kaushan Script, serif;
     font-size: 72px;
-    color: #fff;
     margin: 35px;
-}
-
-header h1:hover{
+    color: #fff;
 
 }
 
@@ -106,6 +107,10 @@ h1:after{
     margin: 30px auto;
 }
 
+.mogo {
+    margin: auto;
+}
+
 button{
     font: inherit;
     color: white;
@@ -123,29 +128,10 @@ button:hover{
     background:linear-gradient(to bottom, #f0d289,#e78682);
 }
 
-.about{
-    height: 750px;
-}
-
-.container_about{
-    width: 1200px;
-    height: 940px;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
-.about .container_about{
-    height: 80%;
-    padding-top: 50px;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
 h4{
     font-family: Kaushan Script, serif;
     font-size: 24px;
-    font-weight: normal;
+    font-weight: bold;
     color: #333333;
     text-align: center;
     margin-bottom: 25px;
@@ -169,167 +155,102 @@ h3:after{
     margin: 30px auto;
 }
 
-p{
-    font-family: "Roboto Light", sans-serif;
-    font-size: 15px;
-    font-weight: normal;
-    color: #999999;
-    text-align: center;
-}
-
-img{
-    display: inline-flex;
-
-}
-
-.img .container{
-    display: inline-flex;
-    justify-content: space-between;
-    padding-top: 100px;
-    height: 100%;
-}
-
-.statistics{
-    display: inline-flex;
+.statistic {
     width: 100%;
-    height: 270px;
-    background: #95e1d3;
-}
-
-.container_statistic{
-    width: 1200px;
-    height: 940px;
-    margin: 0 auto;
+    height: 200px;
+    background-color: #95e1d3;
     margin-top: 100px;
-    margin-bottom: 100px;
 }
 
-.statistics .container_statistic{
+.stat {
+    margin: auto;
+}
+
+.slots {
+    width: 100%;
+    height: 200px;
     display: inline-flex;
-    text-align: center;
-    justify-content: space-around;
-    height: 100%;
-    margin: 0 auto;
+    margin: auto;
+    justify-content: center;
 }
 
-.statistics h2{
+.slot {
+    width: 19%;
+    color: #fff;
+    border-right: solid 1px #ffffff;
+    border-left: solid 1px #ffffff;
+}
+
+.slot span{
     font-family: montserrat, sans-serif;
     font-weight: bold;
     font-size: 72px;
     padding: 5px;
-    margin-bottom: 0;
-
 }
 
-.statistics p{
-    font-family: montserrat, sans-serif;
-    font-weight: normal;
-    font-size: 14px;
-    color: #fff;
-    margin-bottom:10px;
-
+.img {
+    width: 100%;
+    display: inline-flex;
+    justify-content: center;
+    padding: 60px 0 60px 0;
 }
 
-.slot{
-    display: flex;
-    flex-wrap: wrap;
-    width: 20%;
-    justify-content: space-around;
-    border: 1px solid #fff;
-}
-
-.amazing{
-    height: 650px;
-}
-
-.container_amazing{
-    width: 1200px;
-    height: 940px;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
-.amazing .container_amazing{
-    height: 30%;
-    margin-bottom: 0;
-}
-
-.amazing .container_list{
-    height: 70%;
-    width: 1200px;
-    margin: 0 auto;
+.table {
+    margin: 0 10px 0 10px;
+    width: 30.5%;
 }
 
 .list{
-    display: inline-flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
-
-.list p{
-    text-align: left;
+.block {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
 }
 
+.block img {
+    align-self: center;
+    justify-self: center;
 
+}
 
-
-
-h5{
+.block h5 {
     font-family: montserrat, sans-serif;
     font-size: 14px;
     font-weight: normal;
+    align-self: center;
+    justify-self: start;
 }
 
-.amazing_content .container p{
-    font-family: roboto,sans-serif;
-    font-size: 15px;
+.block p {
+    grid-column: 2;
+    grid-row: 2 / 3;
+    color: #999999;
+    text-align: start;
 }
-
-
-
-
 
 .desing{
-    display: flex;
     width: 100%;
-    height: 850px;
     background: #e0e0e0 url(../img/Rectangle.jpg) no-repeat center center / cover;
-    opacity: 50%;
+    opacity: 0.5;
+    position: relative;
+
 }
 
-.desing h4{
-    margin-top: 0;
+.device {
+    margin: 130px 0 0 0;
+
 }
 
-.desing h3{
-    margin-bottom: 0;
-}
-
-
-
-.desing .container_desing{
-    margin: auto;
-    height: 650px;
-}
-
-.container_desing{
-    width: 1200px;
-    height: 940px;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
-.tablet{
+.tablet {
     position: absolute;
-    padding-left: 680px;
-    padding-top: 230px;
 }
 
-.mobile{
-    position: absolute;
-    padding-left: 1090px;
-    padding-top: 465px;
+.mobile {
+    position: relative;
 }
 
 .activList{
@@ -338,17 +259,6 @@ h5{
     padding: 0;
 }
 
-.img_service{
-    display: block;
-    width: 50%;
-    height: 380px;
-    margin: 0;
-}
-
-.activList li{
-    display: block;
-
-}
 .activList h5{
     display: block;
     border: #e5e5e5 1px solid;
@@ -382,29 +292,3 @@ h5{
     border: #e5e5e5 1px solid;
 }
 
-.container_service{
-    display: flex;
-    flex-wrap: nowrap;
-    width: 1200px;
-    height: 940px;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
-.container_proff{
-    display: inline-flex;
-    width: 1200px;
-}
-
-.container_team{
-    width: 1200px;
-    height: 940px;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
-.professional{
-    display: inline-flex;
-}
