--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,8 +5,8 @@ body{
     height: 100%;
     display: block;
     align-items: center;
-
 }
+
 section {
     display: flex;
     flex-direction: column;
@@ -15,7 +15,7 @@ section {
     width: 100%;
 }
 
-.header{
+.header {
     height: 100vh;
     padding: 0;
     background: linear-gradient(rgba(245, 113, 113, 0.8),rgba(252, 227, 138, .8)), url("../img/Layer.jpg");
@@ -52,28 +52,28 @@ section {
     color: #fff;
 }
 
-ul{
+ul {
     width: 50%;
     justify-content: space-between;
 }
 
-.nav li{
+.nav li {
     margin: auto;
     font-family: "Montserrat", sans-serif;
 }
 
-.nav a{
+.nav a {
     font-size: 14px;
     color: #ffffff;
     text-decoration: none;
 }
 
-.nav a:hover{
+.nav a:hover {
     color: #fce38a;
     border-bottom: 2px solid;
 }
 
-.nav i{
+.nav i {
     font-size: 14px;
     color: #fff;
 }
@@ -83,15 +83,14 @@ ul{
     cursor: pointer;
 }
 
-h2{
+h2 {
     font-family: Kaushan Script, serif;
     font-size: 72px;
     margin: 35px;
     color: #fff;
-
 }
 
-h1{
+h1 {
     font-family: montserrat, sans-serif;
     font-weight: bold;
     font-size: 150px;
@@ -99,7 +98,7 @@ h1{
     margin: 35px 0 50px;
 }
 
-h1:after{
+h1:after {
     content: "";
     display: block;
     background: #fff;
@@ -112,7 +111,7 @@ h1:after{
     margin: auto;
 }
 
-button{
+button {
     font: inherit;
     color: white;
     background-color: transparent;
@@ -125,11 +124,11 @@ button{
     border: 3px solid;
 }
 
-button:hover{
+button:hover {
     background:linear-gradient(to bottom, #f0d289,#e78682);
 }
 
-h4{
+h4 {
     font-family: Kaushan Script, serif;
     font-size: 24px;
     font-weight: bold;
@@ -138,7 +137,7 @@ h4{
     margin-bottom: 25px;
 }
 
-h3{
+h3 {
     font-family: montserrat, sans-serif;
     font-size: 30px;
     font-weight: bold;
@@ -147,11 +146,11 @@ h3{
     margin-top: 0;
 }
 
-h3:after{
+h3:after {
     content: "";
     display: block;
     background: #f38181;
-    width: 62px;
+    width: 70px;
     height: 3px;
     margin: 30px auto;
 }
@@ -180,11 +179,9 @@ h3:after{
     color: #fff;
     border-right: solid 1px #ffffff;
     border-left: solid 1px #ffffff;
-
-
 }
 
-.slot span{
+.slot span {
     font-family: montserrat, sans-serif;
     font-weight: bold;
     font-size: 72px;
@@ -220,7 +217,6 @@ h3:after{
 .block img {
     align-self: center;
     justify-self: center;
-
 }
 
 .block h5 {
@@ -242,9 +238,6 @@ h3:after{
     width: 100%;
     height: 900px;
     background: #e0e0e0 url(../img/devices.png) no-repeat center center / cover;
-}
-
-.device {
 }
 
 .tablet {
@@ -289,7 +282,6 @@ h3:after{
     text-align: justify;
     margin: 5px 5px 5px 5px;
     padding: 0 15px 0 15px;
-
 }
 
 .serviceList > li:hover > p {
@@ -310,7 +302,8 @@ h3:after{
     font-size: 14px;
     text-transform: uppercase;
     color: #333333;
-    padding-top: 30px;
+    text-align: left;
+    margin: 20px 15px 0 15px;
 }
 
 .position {
@@ -319,6 +312,8 @@ h3:after{
     font-style: Italic;
     font-weight: 300;
     font-size: 15px;
+    text-align: left;
+    margin: 20px 15px 0 15px;
 }
 
 .labels {
@@ -378,7 +373,6 @@ h3:after{
     cursor: pointer;
     opacity: 0.3;
     transition: opacity 0.2s linear;
-
 }
 
 .title {
@@ -389,12 +383,13 @@ h3:after{
     text-transform: uppercase;
     letter-spacing: 0.2em;
 }
+
  .text {
      font-family: Roboto, sans-serif;
      font-size: 15px;
      font-weight: 300;
      font-style: italic;
-    }
+ }
 
  .reviews {
      background-image: url("../img/clients-bg.png");
@@ -422,5 +417,78 @@ h3:after{
      background: #f38181;
      width: 62px;
      height: 3px;
-     margin: 30px auto;
+     margin: 30px 0 0 0;
  }
+
+ .blogs {
+     display: flex;
+     position: relative;
+     margin: 25px 0 100px 0;
+ }
+
+ .num {
+     margin: auto;
+     font-family: montserrat, sans-serif;
+     font-weight: bold;
+     font-size: 30px;
+     color: #fff;
+ }
+
+ .date {
+     position: absolute;
+     margin-top: -8%;
+     padding: 5px 20px 5px 20px;
+     background-color: #95e1d3;
+     color: #fff;
+     font-family: montserrat, sans-serif;
+ }
+
+.content:after {
+    content: "";
+    display: block;
+    background: #95e1d3;
+    height: 1px;
+    margin: 10px 15px 0 15px;
+}
+ .reaction {
+     display: flex;
+     color: #95e1d3;
+     margin: 10px 15px;
+ }
+
+ .views {
+     padding-right: 15px;
+ }
+
+ .views:hover {
+     color: #333333;
+     cursor: pointer;
+ }
+
+.comments:hover {
+    color: #333333;
+    cursor: pointer;
+}
+
+.location {
+    display: block;
+    height: 300px;
+    width: 100%;
+    background-image: url("../img/map-bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.map a {
+    text-decoration: none;
+}
+
+.map {
+    margin: 80px 0 0 0;
+}
+
+.pointer {
+    color: red;
+    font-size: 40px;
+}
