--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,10 +1,13 @@
-
+html {
+    box-sizing: border-box;
+}
 
 body{
     width: 100%;
     height: 100%;
     display: block;
     align-items: center;
+    background-color: #f8f8f8;
 }
 
 section {
@@ -48,8 +51,8 @@ section {
     text-align: left;
     font-family: montserrat, sans-serif;
     font-weight: bold;
-    font-size: 30px;
-    color: #fff;
+    font-size: 33px;
+    color: #ffffff;
 }
 
 ul {
@@ -111,7 +114,7 @@ h1:after {
     margin: auto;
 }
 
-button {
+.learn {
     font: inherit;
     color: white;
     background-color: transparent;
@@ -124,7 +127,7 @@ button {
     border: 3px solid;
 }
 
-button:hover {
+.learn:hover {
     background:linear-gradient(to bottom, #f0d289,#e78682);
 }
 
@@ -206,7 +209,6 @@ h3:after {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-row-gap: 3em;
-
 }
 
 .block {
@@ -308,7 +310,7 @@ h3:after {
 
 .position {
     color: #999;
-    font-family: Roboto;
+    font-family: "Roboto", sans-serif;
     font-style: Italic;
     font-weight: 300;
     font-size: 15px;
@@ -318,13 +320,25 @@ h3:after {
 
 .labels {
     width: 100%;
-    height: 200px;
+    height: 300px;
     background-color: #f8f8f8;
     margin-top: 100px;
 }
 
 .label {
     margin: auto;
+    padding-top: 40px;
+}
+
+.lab {
+    margin: auto;
+}
+
+.lab img:hover {
+    cursor: pointer;
+    transform: scale(1.5);
+    transition: all 500ms ease-in-out;
+    transition-delay: 0.5ms;
 }
 
 .labs {
@@ -491,4 +505,149 @@ h3:after {
 .pointer {
     color: red;
     font-size: 40px;
+}
+
+.footer_logo {
+    color: #ccc;
+    font-size: 46px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+
+.footer_row_1 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    padding: 0 0 70px 0;
+}
+
+.footer_col {
+    display: flex;
+    flex-direction: column;
+    width: 33.3%;
+    margin: 0 20px 0 20px;
+    text-align: left;
+}
+
+.footer_col h5 {
+    color: #999999;
+    font-size: 24px;
+    margin-bottom: 70px;
+    padding-top: 20px;
+}
+
+.socialNetwork {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.socialNetwork i {
+    color: #999999;
+    font-size: 16px;
+    padding: 0 5px 0 5px;
+    margin: 20px 0 30px 0;
+}
+
+.socialNetwork i:hover {
+    cursor: pointer;
+    color: #928e8e;
+}
+
+.follow {
+    font-family: montserrat, sans-serif;
+    font-size: 14px;
+    font-style: italic;
+    color: #999999;
+    margin: auto 15px auto 0;
+}
+
+.subscribe {
+    line-height: 1.1;
+    font-family: "Roboto", sans-serif;
+    height: 40px;
+    background-color: #95e1d3;
+    border: 0;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+    width: 30%;
+    transition: all 0.2s linear;
+}
+
+.subscribe:hover {
+    background-color: #e0e0e0;
+    cursor: pointer;
+}
+
+.mail {
+    display: inline-flex;
+    flex-wrap: nowrap;
+    width: 100%;
+}
+
+.email {
+    width: 70%;
+    height: 40px;
+    padding: 10px;
+    border: 1px solid #e7e7e7;
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    font-style: italic;
+    font-weight: 300;
+    color: #ccc;
+}
+
+.footer_row_2 {
+    display: block;
+}
+
+.footer_text {
+    font-family: montserrat, sans-serif;
+    font-size: 14px;
+    color: #999999;
+}
+
+.footer_followers {
+    font-family: montserrat, sans-serif;
+    font-size: 14px;
+    padding: 0 0 10px 0;
+    border-bottom: 1px solid #cccccc;
+}
+
+.amount {
+    font-family: montserrat, sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.records {
+
+}
+
+.record {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.designer {
+    padding: 20px 0 0 0;
+    margin: auto;
+    border-top: 1px solid #e5e5e5;
+    text-align: center;
+    font-size: 14px;
+    color: #999999;
+}
+
+.author {
+    padding: 10px 0 0 0;
+    text-align: center;
+    font-size: 14px;
+    color: #999999;
+}
+
+.author a {
+    text-decoration: none;
 }
