--- a/CSS/index.css
+++ b/CSS/index.css
@@ -525,14 +525,14 @@ h3:after {
     display: flex;
     flex-direction: column;
     width: 33.3%;
-    margin: 0 20px 0 20px;
+    padding: 0 30px 0 30px;
     text-align: left;
 }
 
 .footer_col h5 {
     color: #999999;
     font-size: 24px;
-    margin-bottom: 70px;
+    margin-bottom: 50px;
     padding-top: 20px;
 }
 
@@ -550,7 +550,7 @@ h3:after {
 
 .socialNetwork i:hover {
     cursor: pointer;
-    color: #928e8e;
+    color: #797777;
 }
 
 .follow {
@@ -622,10 +622,6 @@ h3:after {
     font-weight: bold;
 }
 
-.records {
-
-}
-
 .record {
     display: flex;
     align-items: center;
@@ -650,4 +646,13 @@ h3:after {
 
 .author a {
     text-decoration: none;
+}
+
+.instagram {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.instagram a {
+    margin: 0 2px 2px 0;
 }
