--- a/CSS/index.css
+++ b/CSS/index.css
@@ -209,6 +209,7 @@ h3:after {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-row-gap: 3em;
+    margin-top: 80px;
 }
 
 .block {
@@ -236,7 +237,7 @@ h3:after {
     text-align: start;
 }
 
-.desing{
+.design{
     width: 100%;
     height: 900px;
     background: #e0e0e0 url(../img/devices.png) no-repeat center center / cover;
@@ -315,13 +316,13 @@ h3:after {
     font-weight: 300;
     font-size: 15px;
     text-align: left;
-    margin: 20px 15px 0 15px;
+    margin: 10px 15px 0 15px;
 }
 
 .labels {
     width: 100%;
     height: 300px;
-    background-color: #f8f8f8;
+    background-color: #f1efef;
     margin-top: 100px;
 }
 
@@ -410,19 +411,22 @@ h3:after {
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
+     padding-bottom: 150px;
  }
 
  .clients {
      display: grid;
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr 1fr;
-     grid-row-gap: 3em;
+     grid-row-gap: 5em;
+     grid-column-gap: 5em;
+     margin-top: 100px;
  }
 
  .client {
      display: grid;
-     grid-template-columns: 1fr 2fr;
-     grid-template-rows: 1fr 1fr 1fr;
+     grid-template-columns: 1fr 4fr;
+     grid-template-rows: 1fr;
  }
 
  ._rew:after {
@@ -431,7 +435,7 @@ h3:after {
      background: #f38181;
      width: 62px;
      height: 3px;
-     margin: 30px 0 0 0;
+     margin: 10px 0 0 0;
  }
 
  .blogs {
@@ -609,6 +613,13 @@ h3:after {
     color: #999999;
 }
 
+.footer_date {
+    font-size: 13px;
+    color: #999;
+    font-style: italic;
+    font-weight: 300;
+}
+
 .footer_followers {
     font-family: montserrat, sans-serif;
     font-size: 14px;
@@ -624,8 +635,9 @@ h3:after {
 
 .record {
     display: flex;
-    align-items: center;
-    margin-bottom: 30px;
+    align-items: start;
+    margin-bottom: 20px;
+
 }
 
 .designer {
@@ -655,4 +667,15 @@ h3:after {
 
 .instagram a {
     margin: 0 2px 2px 0;
+}
+
+.record_text {
+    margin-bottom: 5px;
+    color: #333;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+.record_description {
+    padding: 0 0 0 20px;
 }
