--- a/CSS/index.css
+++ b/CSS/index.css
@@ -206,12 +206,15 @@ h3:after {
 .table {
     margin: 0 10px 0 10px;
     width: 30.5%;
+    transition: ease 0.9s;
+
 }
 
 .table:hover {
     background-color: #ffffff;
     opacity: 0.3;
     cursor: pointer;
+    transition: ease 0.5s;
 }
 
 .list{
@@ -346,11 +349,14 @@ h3:after {
     margin: auto;
 }
 
+.lab img {
+    transition: 0.9s;
+}
+
 .lab img:hover {
     cursor: pointer;
     transform: scale(1.5);
     transition: all 500ms ease-in-out;
-    transition-delay: 0.5ms;
 }
 
 .labs {
@@ -374,7 +380,7 @@ h3:after {
 
 .item {
     position: relative;
-    background: linear-gradient(to bottom, #f38181, #fce38a);
+    transition: ease 0.8s;
 }
 
 .barinfo {
@@ -397,8 +403,8 @@ h3:after {
 
 .item:hover {
     cursor: pointer;
-    opacity: 0.3;
-    transition: opacity 0.2s linear;
+    opacity: 0.2;
+    transition: 0.8s;
 }
 
 .title {
